--- a/src/views/index.html
+++ b/src/views/index.html
@@ -154,10 +154,10 @@
                 <div class="block-morebooks">
                     <div class="block-morebooks-example">
                         <div class="block-book-demo block-book-demo-little">
-                            <h2 class="block-book-demo__title block-book-demo__title-little">Inception
+                            <h2 class="block-book-demo__title-little">Inception
                                 <span>Books are the best friends</span>
                             </h2>
-                            <p class="block-book-demo__author block-book-demo__author-little">- By Emma Anderson</p>
+                            <p class="block-book-demo__author-little">- By Emma Anderson</p>
                         </div>
                         <div class="block-morebooks-text">
                             <h3 class="block-morebooks-text__title">Inception</h3>
@@ -168,10 +168,10 @@
                     </div>
                     <div class="block-morebooks-example">
                             <div class="block-book-demo block-book-demo-little">
-                                <h2 class="block-book-demo__title block-book-demo__title-little">Fight Club
+                                <h2 class="block-book-demo__title-little">Fight Club
                                     <span>Books are the best friends</span>
                                 </h2>
-                                <p class="block-book-demo__author block-book-demo__author-little">- By Emma Anderson</p>
+                                <p class="block-book-demo__author-little">- By Emma Anderson</p>
                             </div>
                             <div class="block-morebooks-text">
                                 <h3 class="block-morebooks-text__title">Fight Club</h3>
@@ -182,10 +182,10 @@
                     </div>
                     <div class="block-morebooks-example">
                             <div class="block-book-demo block-book-demo-little">
-                                <h2 class="block-book-demo__title block-book-demo__title-little">Daredevils
+                                <h2 class="block-book-demo__title-little">Daredevils
                                     <span>Books are the best friends</span>
                                 </h2>
-                                <p class="block-book-demo__author block-book-demo__author-little">- By Emma Anderson</p>
+                                <p class="block-book-demo__author-little">- By Emma Anderson</p>
                             </div>
                             <div class="block-morebooks-text">
                                 <h3 class="block-morebooks-text__title">Daredevils</h3>
@@ -240,7 +240,7 @@
                     </div>
                 </div>
             </div>
-            <svg class="page__svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1600 849"><path fill="#44444f" d="M-1 0l802 61 799-61v789l-799 60-802-60V0z"/></svg>
+            <svg class="page__svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1601 849" preserveAspectRatio="none"><path fill="#44444f" d="M0 0l802 61 799-61v789l-799 60L0 789z"/></svg>
         </div>
 
         <div class="page page-events">
